hphp/hack/test/typecheck/type_structure/type_structure10.php.exp
File "type_structure10.php", line 8, characters 3-15:
  err
File "type_structure10.php", line 8, characters 14-14:
No class constant `T` in `C` (Typing[4090])
File "type_structure10.php", line 3, characters 7-7:
Declaration of `C` is here
File "type_structure10.php", line 8, characters 14-14:
Type constants cannot be directly accessed. Use `type_structure(ValidClassname::class, 'TypeConstName')` instead (Typing[4150])
